use empty completion